# cmux-for-linux

./: .gitignore  CHANGELOG.md  PLAN.md  README.md  index.html  package-lock.json  package.json  skills-lock.json  vite.config.ts
.github/workflows/: release.yml
analysis/: performance-baseline.md
docs/: README.md
docs/bridgespace-re/: README.md
docs/design/: animations-and-states.md  colors-and-tokens.md  component-patterns.md  overview.md  theme-system.md  typography-and-spacing.md
docs/infrastructure/: architecture.md  build-and-dev.md  data-flow.md  frontend-structure.md  rust-backend.md  stack.md
docs/plans/: bug-window-reset.md  multiplatform-implementation.md  performance-optimization.md  ptrcode-multiagent.md  ptrterminal-roadmap.md  rich-browser-pane.md  ui-pane-tab-metadata.md  ui-titlebar-redesign.md
src/: App.tsx  global.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: events.rs  lib.rs  main.rs  socket.rs  terminal_config.rs
src-tauri/src/browser/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/commands/: browser.rs  mod.rs  terminal.rs  window.rs  workspace.rs
src-tauri/src/db/: storage.rs
src-tauri/src/pty/: manager.rs  mod.rs  monitor.rs  session.rs
src/hooks/: useWorkspacePersist.ts
src/lib/: agents.ts  constants.ts  gridTemplates.ts  ipc.ts  keybindings.ts
src/stores/: keybindingStore.ts  paneMetadataStoreCompat.ts  terminalStore.ts  themeStore.ts  workspaceLayoutStore.ts  workspaceListStore.ts  workspaceStore.new.ts  workspaceStore.old.ts  workspaceStore.ts
(+53 files in other folders)
